# III.VC.SA.LimitAdjuster

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  limit_adjuster_gta3vcsa.ini  limit_adjuster_gta3vcsa.sln  premake5.bat  premake5.lua
.github/workflows/: main.yml
VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  limit_adjuster.sln
VS/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  limit_adjuster_gta3vcsa.vcxproj  (+1 more)
doc/: Creating Your Own Adjuster.md  Creating Your Own Adjuster.txt  III.VC.SA.LimitAdjuster.ini  limit_adjuster_gta3vcsa.ini
limit_adjuster_gta3vcsa/: CPatch.h  dllmain.cpp  limit_adjuster_gta3vcsa.vcxproj  limit_adjuster_gta3vcsa.vcxproj.filters  stdafx.cpp
src/: AlphaEntityList.cpp  AtomicModels.cpp  CMakeLists.txt  ClumpModels.cpp  Coronas.cpp  DamageAtomicModels.cpp  FrameLimit.cpp  InVisibleEntityPtrs.cpp  LimitAdjuster.h  MatrixList.cpp  PedModels.cpp  Pools.cpp  Searchlights.cpp  StaticMatrices.cpp  StaticShadows.cpp  StreamingObjectInstancesList.cpp  StreamingObjectInstancesListSize.cpp  TimeModelInfo.cpp  TimeModels.cpp  VehicleModels.cpp  WaterBlocks.cpp  WeaponModels.cpp  dllmain.cpp
src/ini_parser/: ini_parser.hpp
win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  limit_adjuster_gta3vcsa.vcxproj  limit_adjuster_gta3vcsa.vcxproj.filters
(+63 files in other folders)
